<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entrant_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191F36"
    tools:context=".EntrantProfileEditActivity">


    <FrameLayout
        android:id="@+id/profile_picture_frame"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp">

        <!-- Profile Picture ImageView -->
        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_profile_photo"/>

        <!-- Small + Button Overlay -->
        <ImageButton
            android:id="@+id/add_profile_picture_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="bottom|end"
            android:background="@null"
            android:src="@drawable/ic_add_button"
            app:tint="@android:color/darker_gray"
            android:layout_margin="4dp" />
    </FrameLayout>

    <!-- Subheading for Name -->
    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:text="Name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture_frame" />

    <!-- Name Input -->
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="Enter your name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_label" />

    <!-- Subheading for Email -->
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:text="Email"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="Enter your email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_label" />

    <!-- Subheading for Phone -->
    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:text="Phone Number (Optional)"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <!-- Phone Input -->
    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/white"
        android:hint="Enter your phone number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_label" />

    <Button
        android:id="@+id/remove_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3B6064"
        android:text="Remove Your Profile Picture"
        app:layout_constraintBottom_toTopOf="@id/confirm_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_phone" />

    <Button
        android:id="@+id/confirm_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0A4753"
        android:text="Confirm Changes"
        app:layout_constraintTop_toBottomOf="@id/remove_profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
