...
        android:layout_width="411dp"
        android:layout_height="291dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/aurora" />

    <Button
        android:id="@+id/entrantButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#3B6064"
        android:text="I am an Entrant"
...
            android:text="I am an Organizer"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/admin_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#191F36"
        android:text="Admin?"
        android:textColor="#FFC107"
...
