...
            android:src="@drawable/ic_side_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Profile Icon Button -->
        <ImageButton
            android:id="@+id/profile_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:contentDescription="Profile"
...
