...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/admin_v_ev"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#1D3335"
        android:text="Events"
        app:layout_constraintBottom_toTopOf="@+id/admin_v_fac"
...
