...
        app:layout_constraintTop_toBottomOf="@id/admin_v_ev_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView for listing events -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/admin_ev_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/admin_ev_search_view"
        app:layout_constraintBottom_toBottomOf="parent"
...
